--- a/cspTests/cspTests.vcxproj
+++ b/cspTests/cspTests.vcxproj
@@ -166,10 +166,9 @@
   <ItemGroup>
     <ClCompile Include="ac3_tests.cpp" />
     <ClCompile Include="ac4_tests.cpp" />
-    <ClCompile Include="backtracking_tests.cpp" />
     <ClCompile Include="constraint_problem_tests.cpp" />
     <ClCompile Include="constraint_tests.cpp" />
-    <ClCompile Include="heuristic_backtracking_tests.cpp" />
+    <ClCompile Include="graph_coloring_problem.cpp" />
     <ClCompile Include="pc2_tests.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
